--- a/9_SEQUELIZE/12_remover_relacionados/views/useredit.handlebars
+++ b/9_SEQUELIZE/12_remover_relacionados/views/useredit.handlebars
@@ -11,9 +11,9 @@
     </div>
     <div class="form-control form-checkbox">
         {{#if user.newsletter}}
-            <input type="checkbox" name="newsletter" checked>
+        <input type="checkbox" name="newsletter" checked>
         {{else }}
-            <input type="checkbox" name="newsletter">
+        <input type="checkbox" name="newsletter">
         {{/if}}
         <label for="newsletter">Enviar promoções?</label>
     </div>
@@ -37,10 +37,18 @@
         </div>
         <input type="submit" value="Incluir endereço">
     </form>
-</div>
-<div class="address-list">
-    <h2>Lista de endereços</h2>
-    {{#each user.Addresses}}
-        <p>#{{this.id}} - {{this.street}} - {{this.number}} - {{this.city}}</p>
-    {{/each }}
+    <div class="address-list">
+        <h2>Lista de endereços</h2>
+        {{#each user.Addresses}}
+        <div>#{{this.id}} -
+            {{this.street}} -
+            {{this.number}} -
+            {{this.city}}
+            <form action="/address/delete" method="POST">
+                <input type="hidden" name="UserId" value="{{this.UserId}}">
+                <input type="hidden" name="id" value="{{this.id}}">
+                <input type="submit" value="Excluir">
+            </form>
+        </div>
+        {{/each }}
 </div>
